compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__tuples__tuple_destructuring.snap
---
source: compiler-core/src/erlang/tests/tuples.rs
expression: "\npub fn main(tuple) {\n  let #(a, _) = tuple\n  a\n}\n"
---
----- SOURCE CODE

pub fn main(tuple) {
  let #(a, _) = tuple
  a
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1]).

-spec main({K, any()}) -> K.
main(Tuple) ->
    {A, _} = Tuple,
    A.
