compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__tuples__tuple_index.snap
---
source: compiler-core/src/erlang/tests/tuples.rs
expression: "\npub fn main() {\n  let a = #(1, 2, 3)\n  a.0\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let a = #(1, 2, 3)
  a.0
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> integer().
main() ->
    A = {1, 2, 3},
    erlang:element(1, A).
