compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__tuples__tuple_index_2.snap
---
source: compiler-core/src/erlang/tests/tuples.rs
expression: "\npub fn main() {\n  #(1, 2, 3).1\n}\n"
---
----- SOURCE CODE

pub fn main() {
  #(1, 2, 3).1
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> integer().
main() ->
    erlang:element(2, {1, 2, 3}).
