compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__tuples__tuple_with_pipeline.snap
---
source: compiler-core/src/erlang/tests/tuples.rs
expression: "\npub fn main(x) {\n  #(1 |> wibble |> wibble, False)\n}\n\nfn wibble(n) { n }\n"
---
----- SOURCE CODE

pub fn main(x) {
  #(1 |> wibble |> wibble, False)
}

fn wibble(n) { n }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1]).

-spec wibble(K) -> K.
wibble(N) ->
    N.

-spec main(any()) -> {integer(), boolean()}.
main(X) ->
    {begin
        _pipe = 1,
        _pipe@1 = wibble(_pipe),
        wibble(_pipe@1)
    end, false}.
